# bookrec

./: .gitignore  GoodReads_Scrape.ipynb  README.md  goodreads_explore_css  hello.py  pyproject.toml  requirements.txt
App/: Book_Recommender_Final.csv  app.py  book_metadata.csv  my_read_list.csv  user_readlist.csv
App/.ipynb_checkpoints/: app-checkpoint.py  user_readlist-checkpoint.csv
Data/: books_by_genre.json
Data/Clean/: Combined_Book+QualityScore.csv  Combined_Book_Data.csv  GoodReads_Clean.csv  Google_API_Clean.csv
Data/Clean/.ipynb_checkpoints/: Book_Recommender_Final-checkpoint.csv
Data/Raw/: GoodReads_500.csv  GoogleBooksAPI.csv
Data/Raw/.ipynb_checkpoints/: Googlebooks-checkpoint.csv
Data/Raw/Old/: GoodReads_Best_Books_Ever.csv
Notebooks/: Cluster_Analysis.ipynb  DataClean_Merge.ipynb  GoodReads_500_pt3.csv  GoodReads_Final.ipynb  GoodReads_pt2.csv  Google_API.ipynb  books_by_genre.json  combined_books.csv  df_scaled.csv  fetch_book_covers.ipynb
Notebooks/.ipynb_checkpoints/: Cluster_Analysis-checkpoint.ipynb  DataClean_Merge-checkpoint.ipynb  GoodReads_Final-checkpoint.ipynb  Google_API-checkpoint.ipynb
Notebooks/Old/: GoodReads_Best_Books_Ever.ipynb  GoodReads_Fix.ipynb
Notebooks/Old/.ipynb_checkpoints/: GoodReads_Best_Books_Ever-checkpoint.ipynb  GoodReads_Invalid_ID-checkpoint.ipynb
